# perf-tpl

./: .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  PNPM_MIGRATION.md  QUICKSTART.md  README.md  SETUP.md  package.json  renovate.json
client/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/public/: manifest.json  offline.html  robots.txt  sitemap.xml  sw.js
client/public/wasm/: wasm_compute.d.ts  wasm_compute.js  wasm_compute_bg.wasm.d.ts
client/scripts/: copy-sw.cjs  generate-sitemap.js  seo-analyzer.js  update-sw-version.js
client/src/: App.css  App.tsx  main.tsx
client/src/critical/: critical.css  critical.js  critical.ts  registerSW.ts
client/src/styles/: main.css  variables.scss
client/src/sw/: sw.ts
client/src/utils/: meta-tags.ts  shared-buffer-test.ts  storage-manager.ts  structured-data.ts  wasm-loader.ts
client/src/wasm/: Cargo.toml  README.md
client/src/wasm/src/: lib.rs
client/src/workers/: compute-worker.ts  data-worker.ts  shared-buffer-worker.ts
client/vite-plugins/: inline-critical.ts
server/: .env.example  eslint.config.js  package.json  tsconfig.json
server/src/: config.ts  server.ts
server/src/routes/: api.ts  streaming.ts
server/src/websocket/: ws-handler.ts
server/tools/: optimize-images.ts  optimize-videos.ts
